# wheatley

./: .gitignore  Cargo.toml  README.md  bbhash.rs  foo.txt  log.txt  lucille.toml  lucille.txt  scripts.sh
benchmark/: Cargo.toml  README.md  localhost_2025-02-02_04-50-06.report.html  localhost_2025-02-02_10-35-15.report.html  localhost_2025-02-02_11-32-27.report.html  localhost_2025-02-02_11-36-02.report.html  localhost_2025-02-02_15-53-16.report.html  next.config.ts  package-lock.json  package.json
benchmark/app/: header.tsx  images.tsx  page.tsx
cars/: civic.toml  corolla.toml  elantra.toml  sentra.toml
examples/: struct_lookup.rs
examples/books/: hardly_haunted.txt  hug_a_cactus.txt
examples/books/suzanne_lang/: grumpy_monkey.txt
examples/books/theodor_seuss_geisel/dr_seuss/: scrambled_eggs_super.txt
examples/books/theodor_seuss_geisel/theo_lesieg/: in_a_people_house.txt  wacky_wednesday.txt
examples/cars/: corolla.toml
examples/demo/: main.rs
hooser-derive/: Cargo.toml
hooser-derive/src/: lib.rs
src/: lib.rs  main.rs  mphf.rs
tests/: compression.rs  configuration.rs  only.rs  solo.rs
wheatley-macro/: Cargo.toml
wheatley-macro/fixtures/deborah_diesen/: pout_pout_fish.txt
wheatley-macro/fixtures/theodor_seuss_geisel/dr_seuss/: cat_in_the_hat.txt
wheatley-macro/src/: compression.rs  configuration.rs  lib.rs  mphf.rs
