[package]
name = "wheatley"
version = "0.1.0"
edition = "2021"
description = "Embed static, structured assets into your program"
keywords = ["assets", "embed", "dir", "include", "static", "file", "folder", "asset"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boomphf = "0.6.0"
heck = "0.5.0"
phf = { version = "0.11", features = ["macros"] }
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["extra-traits"] }
toml = "0.8.19"
wheatley-macro = { path = "wheatley-macro" }
wyhash = "0.5.0"

[workspace]

[dev-dependencies]
brotli = "6.0.0"
flate2 = "1.0.34"
quickcheck = "1.0.3"
snap = "1.1.1"
zstd = "0.13.2"

[features]
br = ["wheatley-macro/br"]
gzip = ["wheatley-macro/gzip"]
snap = ["wheatley-macro/snap"]
zstd = ["wheatley-macro/zstd"]
